lua/.container/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001

static_resources:
  listeners:
    - name: http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              http_filters:
                - name: envoy.filters.http.lua
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                    default_source_code:
                      inline_string: |
                        function envoy_on_request(request_handle)
                        -- do something
                        end
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match:
                          path: "/lua"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "lua script!"
                      - match:
                          prefix: "/lua/"
                        direct_response:
                          status: 200
                          body:
                            inline_string: "lua script!"
                      - match:
                          prefix: "/"
                        typed_per_filter_config:
                          envoy.filters.http.lua:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                            disabled: true
                        direct_response:
                          status: 200
                          body:
                            inline_string: "hello world!"
